--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
@@ -5,10 +5,9 @@
     ViewData["Title"] = "This email address is already linked to another account";
 }
 
-<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
-
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+@section Back {
+    <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -18,5 +17,3 @@
             <p class="govuk-body">To change the details for an existing user, find their account in <a href="/AccountAdmin/ManagePermissions">manage user permissions</a>.</p>
         </div>
     </div>
-
-</main>
