--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
@@ -6,10 +6,9 @@
     Layout = "~/pages/Shared/_Layout.cshtml";
 }
 
-<a href="@Model.BackPath" class="govuk-back-link">Back</a>
-
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+@section Back {
+    <a href="@Model.BackPath" class="govuk-back-link">Back</a>
+}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -32,6 +31,3 @@
             <p><a href="@Model.BackPath">Back to manage user accounts</a></p>
         </div>
     </div>
-
-
-</main>
