--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
@@ -12,9 +12,10 @@
     @await RenderSectionAsync("Scripts", false)
 }
 
-<a asp-page="@Model.PreviousPageLink" asp-route-cacheId="@Model.CacheId" class="govuk-back-link">Back</a>
+@section Back {
+    <a asp-page="@Model.PreviousPageLink" asp-route-cacheId="@Model.CacheId" class="govuk-back-link">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
@@ -55,4 +56,3 @@
             </form>
         </div>
     </div>
-</main>
