--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
@@ -8,6 +8,7 @@
     <a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
+@* todo:components *@
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
