--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
@@ -5,12 +5,9 @@
     ViewData["Title"] = "Deleting an organisation";
 }
 
-<div class="govuk-width-container ">
-
+@section Back {
     <a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
-
-    <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+}
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
@@ -68,9 +65,4 @@
                     </form>
                 </fieldset>
             </div>
-
-
         </div>
-
-    </main>
-</div>
