--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Manage organisations";
 }
 
-<a asp-page="\Welcome" class="govuk-back-link">Back</a>
-
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+@section Back {
+    <a asp-page="\Welcome" class="govuk-back-link">Back</a>
+}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -67,6 +66,3 @@
         
         </form>
     </div>
-
-
-</main>
