--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
@@ -5,10 +5,9 @@
     ViewData["Title"] = Model.OrganisationName;
 }
 
-<a href="@Model.BackPath" class="govuk-back-link">Back</a>
-
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+@section Back {
+    <a href="@Model.BackPath" class="govuk-back-link">Back</a>
+}
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -33,5 +32,3 @@
             </div>
         </div>
     </form>
-
-</main>
