--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckDetailsPageLayout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckDetailsPageLayout.cshtml
@@ -11,10 +11,9 @@
     @await RenderSectionAsync("Scripts", false)
 }
 
-<a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
-
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
+@section Back {
+    <a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
+}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -39,7 +38,4 @@
             </fieldset>
         </div>
 
-
     </div>
-
-</main>
