--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/OrganisationAdmin/Pages/UploadSpreadsheetData.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/OrganisationAdmin/Pages/UploadSpreadsheetData.cshtml
@@ -3,9 +3,10 @@
 @{
     ViewData["Title"] = "Upload Spreadsheet Data";
 }
-<a asp-page="/OrganisationAdmin/Welcome" asp-route-organisationId="@Model.OrganisationId" class="govuk-back-link" data-testid="back-button">Back</a>
+@section Back {
+    <a asp-page="/OrganisationAdmin/Welcome" asp-route-organisationId="@Model.OrganisationId" class="govuk-back-link" data-testid="back-button">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <form enctype="multipart/form-data" method="post">
         <input asp-for="@Model.OrganisationId" type="hidden">
         @Html.ValidationSummary(false, "", new { @class = "govuk-error-message" })
@@ -62,4 +63,3 @@
             </div>
         </form>
     }
-</main>
