--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/CheckServiceDetails.cshtml
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
 }
 
-<a asp-area="ServiceWizzard" asp-page="ServiceDescription" asp-area="ServiceWizzard" class="govuk-back-link">Back</a>
+@section Back {
+    <a asp-area="ServiceWizzard" asp-page="ServiceDescription" asp-area="ServiceWizzard" class="govuk-back-link">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
@@ -354,4 +355,3 @@
             </fieldset>
         </div>
     </div>
-</main>
