--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/TimesEachDay.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/TimesEachDay.cshtml
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
 }
 
-<a asp-page="WhenServiceTakesPlace" asp-area="ServiceWizzard" class="govuk-back-link">Back</a>
+@section Back {
+    <a asp-page="WhenServiceTakesPlace" asp-area="ServiceWizzard" class="govuk-back-link">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
@@ -106,8 +107,6 @@
                                         </div>
                                     </div>
                                 }
-
-                                
                             }
                         }
                     </div>
@@ -119,4 +118,3 @@
             </fieldset>
         </div>
     </div>
-</main>
