--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_InputPageLayout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_InputPageLayout.cshtml
@@ -12,9 +12,10 @@
     @await RenderSectionAsync("Scripts", false)
 }
 
-<a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
+@section Back {
+    <a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
@@ -65,4 +66,3 @@
             </form>
         </div>
     </div>
-</main>
