remove unnecessary govuk-body's

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
@@ -16,7 +16,7 @@
 
                     <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
-                    <p class="govuk-body" style="overflow-wrap: anywhere">We've emailed @Model.Name:</p>
+                    <p style="overflow-wrap: anywhere">We've emailed @Model.Name:</p>
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>to let them know their permissions have been set up</li>
