--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
@@ -9,11 +9,11 @@
     <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">This email address is already linked to another account</h1>
-            <p class="govuk-body">Check you typed the email address correctly.</p>
-            <p class="govuk-body">If you pasted the email address, check you copied the entire address.</p>
-            <p class="govuk-body">To change the details for an existing user, find their account in <a href="/AccountAdmin/ManagePermissions">manage user permissions</a>.</p>
-        </div>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-l">This email address is already linked to another account</h1>
+        <p>Check you typed the email address correctly.</p>
+        <p>If you pasted the email address, check you copied the entire address.</p>
+        <p>To change the details for an existing user, find their account in <a href="/AccountAdmin/ManagePermissions">manage user permissions</a>.</p>
     </div>
+</div>
