--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/InPersonWhere.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/InPersonWhere.cshtml
@@ -56,9 +56,9 @@
 
                 <br />
 
-                <p class="govuk-body">Give an address where families use the service. This helps people find the service when they search by location. </p>
+                <p>Give an address where families use the service. This helps people find the service when they search by location. </p>
 
-                <p class="govuk-body">If families can go to different addresses, give the main one. You can add others later.</p>
+                <p>If families can go to different addresses, give the main one. You can add others later.</p>
 
                 <div class="govuk-form-group">
                     @*<input asp-for="@Model.StrOrganisationViewModel" type="hidden">*@
