--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ServiceAdded.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ServiceAdded.cshtml
@@ -16,9 +16,9 @@
 
             <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
-            <p class="govuk-body">People working with families can connect you with families who need support.</p>
+            <p>People working with families can connect you with families who need support.</p>
 
-            <p class="govuk-body">View these connections in your inbox on your home page.</p>
+            <p>View these connections in your inbox on your home page.</p>
 
             <form method="post">
                 <button type="submit" class="govuk-button">
