--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
@@ -14,10 +14,10 @@
 
             <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
-            <p class="govuk-body">
+            <p>
                 @Model.DisplayMessage
             </p>
-            <p class="govuk-body">You can do this from your homepage.</p>
+            <p>You can do this from your homepage.</p>
             <form method="post">
                 <a asp-page="welcome" class="govuk-button">Go to homepage</a>
             </form>
