--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ErrorService.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ErrorService.cshtml
@@ -7,7 +7,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Sorry, there is a problem with the service</h1>
-            <p class="govuk-body">Try again later.</p>
+            <p>Try again later.</p>
             <form method="post">
                 <button type="submit" class="govuk-button">
                     Back to homepage
