--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/500.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/500.cshtml
@@ -7,6 +7,6 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Sorry, there is a problem with the service</h1>
-        <p class="govuk-body">Try again later.</p>
+        <p>Try again later.</p>
     </div>
 </div>
