--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_ViewStart.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_ViewStart.cshtml
@@ -1,3 +1,8 @@
-﻿@{
+﻿@using FamilyHubs.SharedKernel.Razor.Layout
+@inject FamilyHubs.SharedKernel.Razor.FamilyHubsUi.FamilyHubsLayoutModel FamilyHubsLayoutModel
+@model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
+
+@{
     Layout = "./_Layout.cshtml";
+    ViewStart.InitialiseFamilyHubs(FamilyHubsLayoutModel, Model, ViewData);
 }
