--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -1,7 +1,10 @@
 ﻿@page
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
 }
+
+<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
