--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/TermsAndConditions.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/TermsAndConditions.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Terms and conditions";
 }
 
+<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
 
