--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Footer.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Footer.cshtml
@@ -20,7 +20,7 @@
                     </li>
 
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="/admin-la/v4/cookies.html">
+                        <a class="govuk-footer__link" href="/cookies/index">
                             Cookies
                         </a>
                     </li>
