add missing Back sections

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/_Layout.cshtml
@@ -10,4 +10,8 @@
     @await RenderSectionAsync("Scripts", false)
 }
 
+@section Back {
+    @await RenderSectionAsync("Back", required: false)
+}
+
 @RenderBody()
