--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/403.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/403.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Error._403Model
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Shared.HeaderPageModel
 @{
     ViewData["Title"] = "You do not have permission to perform this action";
 }
