--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/401.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/401.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Error._401Model
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Shared.HeaderPageModel
 @{
     ViewData["Title"] = "You do not have access to this service";
 }
