remove govuk-link

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
@@ -10,7 +10,7 @@
     <dd class="govuk-summary-list__actions">
         @if (!string.IsNullOrEmpty(Model.ChangeLocation))
         {
-            <a class="govuk-link" href="@Model.ChangeLocation">
+            <a href="@Model.ChangeLocation">
                 @Model.ChangeAnchorText<span class="govuk-visually-hidden"> name</span>
             </a>
         }
