--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/CheckServiceDetails.cshtml
@@ -37,8 +37,8 @@
                             @Model?.OrganisationViewModel?.ServiceName
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceName" data-testid="name-change">
+                            @*<a asp-area="ServiceWizzard" asp-page="ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="ServiceName" data-testid="name-change">
                                 Change<span class="govuk-visually-hidden"> service name</span>
                             </a>
                         </dd>
@@ -62,8 +62,8 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="TypeOfService" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="TypeOfService" data-testid="change-typeofservice">
+                            @*<a asp-area="ServiceWizzard" asp-page="TypeOfService" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="TypeOfService" data-testid="change-typeofservice">
                                 Change<span class="govuk-visually-hidden"> type of support offered</span>
                             </a>
                         </dd>
@@ -84,7 +84,7 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceTimes" data-testid="change-servicedeliverytype">
+                            <a asp-area="ServiceWizzard" asp-page="ServiceTimes" data-testid="change-servicedeliverytype">
                                 Change<span class="govuk-visually-hidden"> type of childcare support offered</span>
                             </a>
                         </dd>
@@ -100,7 +100,7 @@
                                 @string.Join(',',Model.OrganisationViewModel.DaySelection.ToArray())
                             </dd>
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" asp-area="ServiceWizzard" asp-page="DaysTakePlace" data-testid="change-servicedeliverytype">
+                                <a asp-area="ServiceWizzard" asp-page="DaysTakePlace" data-testid="change-servicedeliverytype">
                                     Change<span class="govuk-visually-hidden"> type of childcare support offered</span>
                                 </a>
                             </dd>
@@ -117,7 +117,7 @@
                                 <span>Yes</span>
                             </dd>
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" asp-area="ServiceWizzard" asp-page="DaysTakePlace" data-testid="change-servicedeliverytype">
+                                <a asp-area="ServiceWizzard" asp-page="DaysTakePlace" data-testid="change-servicedeliverytype">
                                     Change<span class="govuk-visually-hidden"> type of childcare support offered</span>
                                 </a>
                             </dd>
@@ -134,7 +134,7 @@
                                 @Model.Times
                             </dd>
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" asp-area="ServiceWizzard" asp-page="TimesEachDay" data-testid="change-servicedeliverytype">
+                                <a asp-area="ServiceWizzard" asp-page="TimesEachDay" data-testid="change-servicedeliverytype">
                                     Change<span class="govuk-visually-hidden"> type of childcare support offered</span>
                                 </a>
                             </dd>
@@ -156,8 +156,8 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceDeliveryType" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceDeliveryType" data-testid="change-servicedeliverytype">
+                            @*<a asp-area="ServiceWizzard" asp-page="ServiceDeliveryType" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="ServiceDeliveryType" data-testid="change-servicedeliverytype">
                                 Change<span class="govuk-visually-hidden"> type of childcare support offered</span>
                             </a>
                         </dd>
@@ -202,8 +202,8 @@
                                 }
                             </dd>
                             <dd class="govuk-summary-list__actions">
-                                @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="InPersonWhere" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
-                                <a class="govuk-link" asp-area="ServiceWizzard" asp-page="InPersonWhere" data-testid="change-inpersonwhere">
+                                @*<a asp-area="ServiceWizzard" asp-page="InPersonWhere" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
+                                <a asp-area="ServiceWizzard" asp-page="InPersonWhere" data-testid="change-inpersonwhere">
                                     Change<span class="govuk-visually-hidden"> address</span>
                                 </a>
                             </dd>
@@ -235,7 +235,7 @@
                         }
 
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="WhoFor" data-testid="change-whofor">
+                            <a asp-area="ServiceWizzard" asp-page="WhoFor" data-testid="change-whofor">
                                 Change<span class="govuk-visually-hidden">type</span>
                             </a>
                         </dd>
@@ -256,8 +256,8 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="WhatLanguage" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="WhatLanguage" data-testid="change-whatlanguage">
+                            @*<a asp-area="ServiceWizzard" asp-page="WhatLanguage" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="WhatLanguage" data-testid="change-whatlanguage">
                                 Change<span class="govuk-visually-hidden">type</span>
                             </a>
                         </dd>
@@ -277,8 +277,8 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="PayForService" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="PayForService" data-testid="change-payforservice">
+                            @*<a asp-area="ServiceWizzard" asp-page="PayForService" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="PayForService" data-testid="change-payforservice">
                                 Change<span class="govuk-visually-hidden"> payment type</span>
                             </a>
                         </dd>
@@ -306,8 +306,8 @@
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="ContactDetails" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="ContactDetails" data-testid="change-contactdetails">
+                            @*<a asp-area="ServiceWizzard" asp-page="ContactDetails" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="ContactDetails" data-testid="change-contactdetails">
                                 Change<span class="govuk-visually-hidden"> contact details</span>
                             </a>
                         </dd>
@@ -320,8 +320,8 @@
                             <p>@Model?.OrganisationViewModel?.ServiceDescription</p>
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceDescription" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-area="ServiceWizzard" asp-page="ServiceDescription" data-testid="change-servicedescription">
+                            @*<a asp-area="ServiceWizzard" asp-page="ServiceDescription" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
+                            <a asp-area="ServiceWizzard" asp-page="ServiceDescription" data-testid="change-servicedescription">
                                 Change<span class="govuk-visually-hidden">service description</span>
                             </a>
                         </dd>
