--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/PlaceHolder.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/PlaceHolder.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Shared.HeaderPageModel
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
